# nvidia-acceleration

./: README.md
conversion-toolchain/: README.md
runtime-library/: CMakeLists.txt  build-runtime.sh
runtime-library/src/: runtime_core.c
